Attempt 1 to fix image load on mobile

--- a/frontend/src/Components/NavBar.css
+++ b/frontend/src/Components/NavBar.css
@@ -29,6 +29,7 @@
 
 .nav-bar .logo img {
   height: 100%;
+  width: 100%;
   object-fit: contain;
   cursor: pointer;
   z-index: 100;
